# inference-bench

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bench.rs  detect.rs  endpoints.rs  main.rs  metrics.rs  output.rs
