[package]
name = "inference-bench"
version = "0.1.0"
edition = "2021"
description = "LLM inference benchmark CLI for GPD Pocket 4"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
comfy-table = "7"

[profile.release]
opt-level = 2
lto = "thin"
